place start card e qualche fix player/room